Verif/Test/Invalide/test_erreur_3.73-61.deca
// Description:
//    Programme soulevant l'erreur (3.73)
// Resultats:
//    Erreur contextuelle
//    Ligne 14 : Les types 'String' et 'boolean' sont incompatibles avec l'opérateur binaire '/' (règle 3.73)
//
// Attributs: exec correct automatique
//
// Historique:
//    cree le 14/01/2012

boolean var;
{
   var = "a" / true;
}